--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primereact": "^10.6.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5"
