--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
